Remove reference to Checkouts

--- a/client/views/nav/navbar/navbar.html
+++ b/client/views/nav/navbar/navbar.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-      <span class="sr-only">A&S Checkouts</span>
+      <span class="sr-only">Triage</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
