--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -1,43 +1,45 @@
 <template name="ticketModal">
-  <div class="modal fade" id="ticketModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">{{title}}</h4>
-        </div>
-        <div class="modal-body">
-          <div class="row row-no-margin">
-            {{> ticketHeadingPanels}}
+  {{#with ticket}}
+    <div class="modal fade" id="ticketModal" role="dialog" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">{{title}}</h4>
           </div>
-
-          <div class="row row-no-margin">
-            <label for="body">Body:</label>
-            <blockquote>
-              {{#each bodyParagraph}}
-                <p>{{this}}</p>
-              {{/each}}
-            </blockquote>
-          </div>
-
-          {{#if formFields}}
-            <div class="row">
-              {{> formFieldsPanel}}
+          <div class="modal-body">
+            <div class="row row-no-margin">
+              {{> ticketHeadingPanels}}
             </div>
-          {{/if}}
 
-          <div class="row">
-            <div class="col-md-9 ticket-note-area">
-              <div class="row row-no-margin">
-                {{> ticketNoteArea}}
+            <div class="row row-no-margin">
+              <label for="body">Body:</label>
+              <blockquote>
+                {{#each bodyParagraph}}
+                  <p>{{this}}</p>
+                {{/each}}
+              </blockquote>
+            </div>
+
+            {{#if formFields}}
+              <div class="row">
+                {{> formFieldsPanel}}
               </div>
-            </div>
-            <div class="col-md-3 ticket-sidebar">
-              {{> ticketInfoPanels}}
+            {{/if}}
+
+            <div class="row">
+              <div class="col-md-9 ticket-note-area">
+                <div class="row row-no-margin">
+                  {{> ticketNoteArea}}
+                </div>
+              </div>
+              <div class="col-md-3 ticket-sidebar">
+                {{> ticketInfoPanels}}
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  {{/with}}
 </template>
