--- a/client/app.css
+++ b/client/app.css
@@ -493,7 +493,11 @@ blockquote {
 } 
 
 .note-well {
-  margin-bottom: 0px;
+  margin-bottom: 2px;
+}
+
+.note-well p {
+  margin: 0px;
 }
 
 .panel {
