Autocomplete select now automatically adds users and tags and a CSS class name change for clarity.

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -21,7 +21,7 @@
     </div>
     <div class="pull-right">
       {{#each members}}
-      {{>userPortrait userId=this class="user-image" fadeIfOffline=true}}
+      {{>userPortrait userId=this class="queue-user-image" fadeIfOffline=true}}
       {{/each}}
     </div>
   </div>
