--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -45,7 +45,7 @@
       <div class="col-xs-4 col-md-2">
         <label for="note-{{_id}}" class="control-label pull-right">
           {{#if authorId}}
-            {{> userPortrait userId=authorId class="user-image"}}
+            {{> userPortrait userId=authorId}}
             {{else}}
             {{authorEmail}} (via e-mail)
           {{/if}}
@@ -124,7 +124,7 @@
         </div>
       {{/if}}
       {{#each associatedUserIds}}
-        {{> userPortrait userId=this associated=true class="user-image"}}
+        {{> userPortrait userId=this associated=true}}
       {{/each}}
     </div>
   </div>
