--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -18,7 +18,7 @@
       <label for="body">Body:</label>
       <blockquote>
         {{#each bodyParagraph}}
-          <p>{{this}}</p>
+          <p>{{linkify this}}</p>
         {{/each}}
       </blockquote>
     </div>
