--- a/client/views/modals/attachmentModal/attachmentModal.html
+++ b/client/views/modals/attachmentModal/attachmentModal.html
@@ -12,7 +12,7 @@
               <img style="max-width: 95%; max-height: 95%;" src="/file/{{filenameOnDisk}}">
             {{/if}}
             {{#if fileIsPdf}}
-              <embed src="/file/{{filenameOnDisk}}" width="95%" type="application/pdf">
+              <embed src="/file/{{filenameOnDisk}}" width="95%" height="600" type="application/pdf">
             {{/if}}
           </div>
         </div>
