Serve download from preview modal using updated FileRegistry api.

--- a/client/views/modals/attachmentModal/attachmentModal.html
+++ b/client/views/modals/attachmentModal/attachmentModal.html
@@ -15,7 +15,7 @@
               <embed class="attachment-modal-pdf" src="/file/{{filenameOnDisk}}" type="application/pdf">
             {{/if}}
             <div class="attachment-modal-download-button">
-              <a href="/file/{{filenameOnDisk}}" target="_blank">
+              <a href="/download/{{filenameOnDisk}}" target="_blank">
                 <button type="button" class="btn btn-lg btn-primary">Download File</button>
               </a>
             </div>
