--- a/client/views/modals/attachmentModal/attachmentModal.html
+++ b/client/views/modals/attachmentModal/attachmentModal.html
@@ -9,10 +9,10 @@
           </div>
           <div class="modal-body">
             {{#if fileIsImage}}
-              <img class="attachment-modal-image" src="/file/{{filenameOnDisk}}">
+              <img class="attachment-modal-image" src="{{encodedURI}}">
             {{/if}}
             {{#if fileIsPdf}}
-              <embed class="attachment-modal-pdf" src="/file/{{filenameOnDisk}}" type="application/pdf">
+              <embed class="attachment-modal-pdf" src="{{encodedURI}}" type="application/pdf">
             {{/if}}
             <div class="attachment-modal-download-button">
               <a href="/download/{{filenameOnDisk}}" target="_blank">
