Add warning text to send to another queue dialog.

--- a/client/views/modals/sendToAnotherQueueModal.html
+++ b/client/views/modals/sendToAnotherQueueModal.html
@@ -3,10 +3,13 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
-          Send to Another Queue
+          Transfer to Another Queue
         </div>
         <div class="modal-body">
-          {{originalTicket.title}}
+          <div class="alert alert-warning">When transferring a ticket to
+            another queue, keep in mind that this may affect the work load of
+            the other team.  You should follow up to make sure they are aware
+            of the reasons for the transfer.</div>
           <div class="form-group">
             <label for="queueName" class="control-label">Queue:</label>
             <div>
