Automatically hyperlink URLs in ticket titles and form fields.

--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -12,7 +12,7 @@
       <label for="title">Title:</label>
       <blockquote>
         <strong>
-          {{title}}
+          {{linkify title}}
         </strong>
       </blockquote>
       <label for="body">Body:</label>
