--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -17,7 +17,7 @@
               {{#each arrayify formFields}}
                 <tr>
                   <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
-                  <td class="col-xs-10 col-md-10">{{value}}</td>
+                  <td class="col-xs-10 col-md-10">{{linkify value}}</td>
                 </tr>
               {{/each}}
             </tbody>
