--- a/client/views/queue/processMiner.html
+++ b/client/views/queue/processMiner.html
@@ -33,7 +33,8 @@
           </marker>
         </defs>
         {{#each edges}}
-          <line x1={{from.x}} y1={{from.y}} x2={{to.x}} y2={{to.y}} stroke="black" stroke-width={{count}} marker-end="url(#mT2)"></line>
+        <!--<line x1={{from.x}} y1={{from.y}} x2={{to.x}} y2={{to.y}} stroke="black" stroke-width={{count}} marker-end="url(#mT2)"></line>-->
+        <path d="M{{from.x}},{{from.y}} A{{r.x}},{{r.y}} {{rot}} 0,0 {{to.x}},{{to.y}}" stroke="black" fill="none" stroke-width={{count}} marker-end="url(#mT2)"></path>
         {{/each}}
       </svg>
       {{/with}}
