Bugfix: ticket modal now scrolls appropriately after closing send to another queue modal.

--- a/client/views/modals/sendToAnotherQueueModal/sendToAnotherQueueModal.html
+++ b/client/views/modals/sendToAnotherQueueModal/sendToAnotherQueueModal.html
@@ -3,6 +3,7 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           Transfer to Another Queue
         </div>
         <div class="modal-body">
@@ -23,7 +24,7 @@
         </div>
         <div class="modal-footer">
           <div class="input-buttons pull-right">
-            <button class="btn btn-responsive btn-default" name="cancel">Cancel</button>
+            <button class="btn btn-responsive btn-default" data-dismiss="modal">Cancel</button>
             <button class="btn btn-responsive btn-primary" name="send">Send</button>
           </div>
         </div>
