--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -271,7 +271,7 @@
 </template>
 
 <template name="removeAttachmentModal">
-  <div class="modal fade in" id="removeAttachmentModal" role="dialog" aria-hidden="true">
+  <div class="modal fade" id="removeAttachmentModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
