--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -24,7 +24,7 @@
         </div>
       {{/unless}}
       <div class="pull-left">
-        <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#newTicketModal">Add New Ticket</button>
+        <button class="btn btn-primary" type="button" data-action="showNewTicketModal">Add New Ticket</button>
         <button class="btn btn-success" type="button" data-action="openQuickAdd">Quick Add Ticket</button>
       </div>
       <div class="pull-right hidden-xs">
