--- a/client/views/queue/views/ticketTable/ticketTable.html
+++ b/client/views/queue/views/ticketTable/ticketTable.html
@@ -18,9 +18,9 @@
             <th class="col-md-1 hidden-xs">&nbsp;</th>
             <th class="col-md-4"><span class="field-table-heading" data-sort-key="subject">Subject</span></th>
             <th class="col-md-2">Requester</th>
-            <th class="col-md-2 hidden-xs">Associated</th>
+            <th class="col-md-2">Associated</th>
             <th class="col-md-1">Status</th>
-            <th class="col-md-2">Submitted</th>
+            <th class="col-md-2 hidden-xs">Submitted</th>
           </tr>
         </thead>
         <tbody>
